--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Api Server Simulator so you can mock api Rest services easily.",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
