--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "api-server-sim",
-  "version": "0.0.1",
+  "version": "0.0.1-master.a24fc4c",
   "description": "Api Server Simulator so you can mock api Rest services easily.",
   "main": "index.js",
   "scripts": {
