--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "api-server-sim",
-  "version": "0.0.1-master.a24fc4c",
-  "description": "Api Server Simulator so you can mock api Rest services easily.",
-  "main": "index.js",
-  "scripts": {
-    "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC"
+	"name": "api-server-sim",
+	"version": "0.0.2",
+	"description": "Api Server Simulator so you can mock api Rest services easily.",
+	"main": "index.js",
+	"scripts": {
+		"start": "node index.js",
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"author": "",
+	"license": "ISC"
 }
