--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
 		"start": "node index.js",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
-	"author": "",
-	"license": "ISC"
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/oscarcenteno/api-server-sim.git"
+	},
+	"author": "Oscar Centeno",
+	"license": "UNLICENSED"
 }
