--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "api-server-sim",
-	"version": "0.0.3",
+	"version": "0.0.4",
 	"description": "Api Server Simulator so you can mock api Rest services easily.",
 	"main": "index.js",
 	"scripts": {
@@ -17,5 +17,11 @@
 		"convert-excel-to-json": "^1.6.1",
 		"express": "^4.17.1",
 		"underscore": "^1.9.1"
+	},
+	"devDependencies": {
+		"axios": "^0.19.0",
+		"jasmine": "^3.5.0",
+		"jasmine-console-reporter": "^3.1.0",
+		"jasmine-pretty-html-reporter": "^0.2.5"
 	}
 }
