--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
 	"name": "api-server-sim",
-	"version": "0.0.4",
+	"version": "0.0.5",
 	"description": "Api Server Simulator so you can mock api Rest services easily.",
 	"main": "index.js",
 	"scripts": {
-		"start": "node index.js",
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"start": "node test_server/server.js",
+		"test": "jasmine"
 	},
 	"repository": {
 		"type": "git",
