--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
 	"name": "api-server-sim",
-	"version": "0.0.8",
+	"version": "0.0.9",
 	"description": "Api Server Simulator so you can mock api Rest services easily.",
 	"main": "index.js",
 	"scripts": {
 		"start": "node test_server/server.js",
-		"test": "jasmine"
+		"test": "jasmine",
+		"tsc": "./node_modules/.bin/tsc"
 	},
 	"repository": {
 		"type": "git",
@@ -19,9 +20,14 @@
 		"underscore": "^1.9.1"
 	},
 	"devDependencies": {
+		"@types/jasmine": "^3.4.4",
+		"@types/jasminewd2": "^2.0.8",
+		"@types/node": "^12.12.3",
 		"axios": "^0.19.0",
+		"eslint": "^6.6.0",
 		"jasmine": "^3.5.0",
 		"jasmine-console-reporter": "^3.1.0",
-		"jasmine-pretty-html-reporter": "^0.2.5"
+		"jasmine-pretty-html-reporter": "^0.2.5",
+		"typescript": "^3.6.4"
 	}
 }
