--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
 	"scripts": {
 		"start": "node test_server/server.js",
 		"test": "jasmine",
-		"tsc": "./node_modules/.bin/tsc"
+		"lint": "eslint ./",
+		"lint-fix": "eslint ./ --fix",
+		"spell": "cspell **/*.js",
+		"tsc": "tsc",
+		"checks": "npm run lint && npm run tsc && npm run spell"
 	},
 	"repository": {
 		"type": "git",
@@ -16,18 +20,19 @@
 	"license": "UNLICENSED",
 	"dependencies": {
 		"convert-excel-to-json": "^1.6.1",
+		"cspell": "^4.0.33",
 		"express": "^4.17.1",
 		"underscore": "^1.9.1"
 	},
 	"devDependencies": {
-		"@types/jasmine": "^3.4.4",
+		"@types/jasmine": "^3.4.6",
 		"@types/jasminewd2": "^2.0.8",
-		"@types/node": "^12.12.3",
+		"@types/node": "^12.12.6",
 		"axios": "^0.19.0",
 		"eslint": "^6.6.0",
 		"jasmine": "^3.5.0",
 		"jasmine-console-reporter": "^3.1.0",
 		"jasmine-pretty-html-reporter": "^0.2.5",
-		"typescript": "^3.6.4"
+		"typescript": "^3.7.2"
 	}
 }
