--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,15 @@
       "type": "node",
       "request": "launch",
       "name": "Launch Sample API Server",
-      "program": "${workspaceFolder}\\test_server\\server.js"
+      "runtimeExecutable": "npm",
+      "runtimeArgs": [
+        "start",
+        "debug"
+      ],
+      "port": 9229,
+      "skipFiles": [
+        "<node_internals>/**"
+      ]
     }
   ]
 }
