--- a/package.json
+++ b/package.json
@@ -20,14 +20,15 @@
 	"license": "UNLICENSED",
 	"dependencies": {
 		"convert-excel-to-json": "^1.6.1",
-		"cspell": "^4.0.33",
+		"cspell": "^4.0.34",
 		"express": "^4.17.1",
+		"express-openapi-validator": "^2.15.0",
 		"underscore": "^1.9.1"
 	},
 	"devDependencies": {
 		"@types/jasmine": "^3.4.6",
 		"@types/jasminewd2": "^2.0.8",
-		"@types/node": "^12.12.6",
+		"@types/node": "^12.12.8",
 		"axios": "^0.19.0",
 		"eslint": "^6.6.0",
 		"jasmine": "^3.5.0",
