--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "api-server-sim",
-	"version": "0.0.14",
+	"version": "0.0.15",
 	"description": "Api Server Simulator so you can mock api Rest services easily.",
 	"main": "index.js",
 	"scripts": {
@@ -23,6 +23,7 @@
 		"cspell": "^4.0.34",
 		"express": "^4.17.1",
 		"express-openapi-validator": "^2.15.0",
+		"json-schema-ref-parser": "^7.1.2",
 		"underscore": "^1.9.1"
 	},
 	"devDependencies": {
