--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "api-server-sim",
-	"version": "0.1.1",
+	"version": "0.1.2",
 	"description": "Api Server Simulator so you can mock api Rest services easily.",
 	"main": "index.js",
 	"scripts": {
@@ -22,19 +22,23 @@
 		"convert-excel-to-json": "^1.6.1",
 		"cspell": "^4.0.34",
 		"express": "^4.17.1",
-		"express-openapi-validator": "^2.15.0",
+		"express-openapi-validator": "^2.15.1",
+		"fake-smtp-server": "^0.8.0",
 		"json-schema-ref-parser": "^7.1.2",
+		"maildev": "^1.1.0",
+		"moment": "^2.24.0",
 		"underscore": "^1.9.1"
 	},
 	"devDependencies": {
 		"@types/jasmine": "^3.4.6",
 		"@types/jasminewd2": "^2.0.8",
-		"@types/node": "^12.12.8",
+		"@types/node": "^12.12.11",
 		"axios": "^0.19.0",
 		"eslint": "^6.6.0",
 		"jasmine": "^3.5.0",
 		"jasmine-console-reporter": "^3.1.0",
 		"jasmine-pretty-html-reporter": "^0.2.5",
+		"nodemailer": "^6.3.1",
 		"typescript": "^3.7.2"
 	}
 }
