--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,5 +14,18 @@
             "host": "localhost:3001"
         }
     },
-    "editor.wordWrap": "on"
+    "editor.wordWrap": "on",
+    "workbench.colorCustomizations": {
+        "activityBar.background": "#1f6fd0",
+        "activityBar.activeBorder": "#ee90bb",
+        "activityBar.foreground": "#e7e7e7",
+        "activityBar.inactiveForeground": "#e7e7e799",
+        "activityBarBadge.background": "#ee90bb",
+        "activityBarBadge.foreground": "#15202b",
+        "statusBar.background": "#1857a4",
+        "statusBarItem.hoverBackground": "#1f6fd0",
+        "statusBar.foreground": "#e7e7e7",
+        "tab.activeBorder": "#1f6fd0"
+    },
+    "peacock.color": "#1857a4"
 }
