--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
 	"license": "MIT",
 	"dependencies": {
 		"convert-excel-to-json": "^1.6.1",
-		"cspell": "^4.0.34",
+		"cspell": "^4.0.35",
 		"express": "^4.17.1",
-		"express-openapi-validator": "^2.15.1",
+		"express-openapi-validator": "2.15.1",
 		"fake-smtp-server": "^0.8.0",
 		"json-schema-ref-parser": "^7.1.2",
 		"maildev": "^1.1.0",
@@ -30,11 +30,11 @@
 		"underscore": "^1.9.1"
 	},
 	"devDependencies": {
-		"@types/jasmine": "^3.4.6",
+		"@types/jasmine": "^3.5.0",
 		"@types/jasminewd2": "^2.0.8",
-		"@types/node": "^12.12.11",
+		"@types/node": "^12.12.14",
 		"axios": "^0.19.0",
-		"eslint": "^6.6.0",
+		"eslint": "^6.7.2",
 		"jasmine": "^3.5.0",
 		"jasmine-console-reporter": "^3.1.0",
 		"jasmine-pretty-html-reporter": "^0.2.5",
