updating to newwer versions of dependencies. All tests pass.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,17 +19,14 @@
     },
     "editor.wordWrap": "on",
     "workbench.colorCustomizations": {
-        "activityBar.background": "#1f6fd0",
-        "activityBar.activeBackground": "#1f6fd0",
         "activityBar.activeBorder": "#ee90bb",
-        "activityBar.foreground": "#e7e7e7",
-        "activityBar.inactiveForeground": "#e7e7e799",
-        "activityBarBadge.background": "#ee90bb",
-        "activityBarBadge.foreground": "#15202b",
         "statusBar.background": "#1857a4",
         "statusBarItem.hoverBackground": "#1f6fd0",
         "statusBar.foreground": "#e7e7e7",
-        "tab.activeBorder": "#1f6fd0"
+        "tab.activeBorder": "#1f6fd0",
+        "sideBar.border": "#1f6fd0",
+        "statusBarItem.remoteBackground": "#1857a4",
+        "statusBarItem.remoteForeground": "#e7e7e7"
     },
     "peacock.color": "#1857a4",
     "editor.codeActionsOnSave": {
